[package]
name = "kitsune-cli"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.71"
argon2 = { version = "0.5.0", features = ["std"] }
clap = { version = "4.3.11", features = ["derive"] }
diesel = "2.1.0"
diesel-async = "0.3.1"
dotenvy = "0.15.7"
envy = "0.4.2"
hex-simd = "0.8.0"
iso8601-timestamp = "0.2.11"
kitsune-db = { path = "../kitsune-db" }
rand = "0.8.5"
rsa = "0.9.2"
serde = { version = "1.0.167", features = ["derive"] }
speedy-uuid = { path = "../lib/speedy-uuid" }
time = "0.3.22"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "git", "gitoxide"] }
